--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -121,5 +121,13 @@
             "close": "Закрыть",
             "error": "Ошибка регистрации"
         }
+    },
+    "inviteTheme": {
+        "title": "Выберите тему приглашения",
+        "pickColor": "Выбрать цвет",
+        "disabled": "Выбор недоступен",
+        "choose": "Выбрать",
+        "light": "☀️ Светлая тема",
+        "dark": "🌙 Тёмная тема"
     }
 }
