--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -68,7 +68,9 @@
         "registration": "Регистрация",
         "registerPrompt": "Добро пожаловать! Чтобы присоединиться к мероприятию, зарегистрируйтесь ниже.",
         "registerButton": "Зарегистрироваться",
-        "loginRegister": "Войти / Зарегистрироваться"
+        "loginRegister": "Войти / Зарегистрироваться",
+        "alreadyRegistered": "Вы успешно зарегистрированы",
+        "pendingApproval": "Ожидание подтверждения"
     },
     "eventOverview": {
         "loadError": "Не удалось загрузить событие",
