--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -102,7 +102,8 @@
         "uploadTitle": "Загрузить новый аватар",
         "cancel": "Отмена",
         "groups": "Участник групп",
-        "organizedEvents": "Организованные мероприятия"
+        "organizedEvents": "Организованные мероприятия",
+        "noEvents": "Нет организованных мероприятий"
     },
     "login": {
         "title": "Вход",
