--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -103,7 +103,9 @@
         "cancel": "Отмена",
         "groups": "Участник групп",
         "organizedEvents": "Организованные мероприятия",
-        "noEvents": "Нет организованных мероприятий"
+        "noEvents": "Нет организованных мероприятий",
+        "editInfo": "Редактировать информацию",
+        "save": "Сохранить"
     },
     "login": {
         "title": "Вход",
