--- a/src/locales/uz/translation.json
+++ b/src/locales/uz/translation.json
@@ -95,7 +95,9 @@
     "cancel": "Bekor qilish",
     "groups": "Guruh a’zoligi",
     "organizedEvents": "Tashkil etilgan tadbirlar",
-    "noEvents": "Tashkil etilgan tadbirlar yo‘q"
+    "noEvents": "Tashkil etilgan tadbirlar yo‘q",
+    "editInfo": "Maʼlumotlarni tahrirlash",
+    "save": "Saqlash"
   },
   "login": {
     "title": "Kirish",
